@@ -1,5 +1,6 @@
 v0.1.0
 - fixed pretty xml when stylesheet is used
+- added value() to MARC::DataField
 
 v0.0.9  Tue Mar 28 10:02:16 CST 2006
 - changed XMLWriter.write to output pretty-printed XML
